--- a/Makefile.am
+++ b/Makefile.am
@@ -60,7 +60,7 @@ dist-hook:
 
 .PHONY: AUTHORS
 
-RUNTIME_TYPELIB_PATH = libide:contrib/egg:contrib/pnl:contrib/tmpl:$(GI_TYPELIB_PATH)
+RUNTIME_TYPELIB_PATH = libide:contrib/egg:contrib/pnl:contrib/tmpl:contrib/mi2:$(GI_TYPELIB_PATH)
 
 run:
 	@ LSAN_OPTIONS=suppressions=$(top_srcdir)/build/asan.supp              \
@@ -72,6 +72,7 @@ run:
 	GI_TYPELIB_PATH="$(RUNTIME_TYPELIB_PATH)"                              \
 	GOBJECT_DEBUG=instance-count                                           \
 	PYTHONDONTWRITEBYTECODE=yes                                            \
+	LD_LIBRARY_PATH=contrib/mi2/.libs:$(LD_LIBRARY_PATH)                   \
 	PATH=$(top_builddir)/src:${PATH}                                       \
 	$(LIBTOOL) --mode=execute gdb                                          \
 	    -ex 'handle SIGPIPE nostop noprint pass'                           \
