xml-pack: get location infos from cursor

--- a/plugins/xml-pack/Makefile.am
+++ b/plugins/xml-pack/Makefile.am
@@ -22,6 +22,8 @@ libxml_pack_plugin_la_SOURCES =              \
 	ide-xml-parser-generic.h             \
 	ide-xml-parser-ui.c                  \
 	ide-xml-parser-ui.h                  \
+	ide-xml-position.c                   \
+	ide-xml-position.h                   \
 	ide-xml-sax.c                        \
 	ide-xml-sax.h                        \
 	ide-xml-service.c                    \
