--- a/plugins/xml-pack/Makefile.am
+++ b/plugins/xml-pack/Makefile.am
@@ -9,6 +9,8 @@ dist_plugin_DATA = xml-pack.plugin
 libxml_pack_plugin_la_SOURCES =              \
 	ide-xml-analysis.c                   \
 	ide-xml-analysis.h                   \
+	ide-xml-completion-provider.c        \
+	ide-xml-completion-provider.h        \
 	ide-xml-diagnostic-provider.c        \
 	ide-xml-diagnostic-provider.h        \
 	ide-xml-highlighter.c                \
