--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,7 @@ GITIGNOREFILES =                                                               \
 	gtk-doc.make                                                           \
 	INSTALL                                                                \
 	ABOUT-NLS                                                              \
+	Makecache                                                              \
 	$(NULL)
 
 AUTHORS:
