xml-pack: add a chained hash table object
Using GHashTable, we can add multiple chained
values to a key.

--- a/plugins/xml-pack/Makefile.am
+++ b/plugins/xml-pack/Makefile.am
@@ -13,6 +13,8 @@ libxml_pack_plugin_la_SOURCES =              \
 	ide-xml-completion-provider.h        \
 	ide-xml-diagnostic-provider.c        \
 	ide-xml-diagnostic-provider.h        \
+	ide-xml-hash-table.c                 \
+	ide-xml-hash-table.h                 \
 	ide-xml-highlighter.c                \
 	ide-xml-highlighter.h                \
 	ide-xml-indenter.c                   \
