--- a/plugins/xml-pack/Makefile.am
+++ b/plugins/xml-pack/Makefile.am
@@ -28,6 +28,8 @@ libxml_pack_plugin_la_SOURCES =              \
 	ide-xml-parser-ui.h                  \
 	ide-xml-position.c                   \
 	ide-xml-position.h                   \
+	ide-xml-rng-define.c                 \
+	ide-xml-rng-define.h                 \
 	ide-xml-sax.c                        \
 	ide-xml-sax.h                        \
 	ide-xml-service.c                    \
