--- a/plugins/xml-pack/Makefile.am
+++ b/plugins/xml-pack/Makefile.am
@@ -32,6 +32,8 @@ libxml_pack_plugin_la_SOURCES =              \
 	ide-xml-rng-define.h                 \
 	ide-xml-rng-grammar.c                \
 	ide-xml-rng-grammar.h                \
+	ide-xml-rng-parser.h                 \
+	ide-xml-rng-parser.c                 \
 	ide-xml-sax.c                        \
 	ide-xml-sax.h                        \
 	ide-xml-service.c                    \
