--- a/meson.build
+++ b/meson.build
@@ -125,6 +125,7 @@ libgtk_dep = dependency('gtk+-3.0', version: '>= 3.22.1')
 libpeas_dep = dependency('libpeas-1.0', version: '>= 1.18.0')
 libm_dep = cc.find_library('m', required: false)
 libjson_glib_dep = dependency('json-glib-1.0', version: '>= 1.2.0')
+libdazzle_dep = dependency('libdazzle-1.0', version: '>= 0.1.0')
 
 if get_option('with_flatpak') or get_option('with_git')
   libgit_dep = dependency('libgit2-glib-1.0', version: '>= 0.25.0')
