--- a/libide/meson.build
+++ b/libide/meson.build
@@ -626,7 +626,6 @@ libide_deps = [
   libgtk_dep,
   libpeas_dep,
   libegg_dep,
-  libpnl_dep,
   libtmpl_dep,
   libxml_dep,
   libsearch_dep,
@@ -702,10 +701,10 @@ libide = shared_library('ide-' + libide_api_version,
 libide_dep = declare_dependency(
   sources: libide_generated_headers,
   dependencies: [
+    libdazzle_dep,
     libgio_dep,
     libgtk_dep,
     libgtksource_dep,
-    libpnl_dep,
     libegg_dep,
     libjson_glib_dep,
   ],
@@ -717,10 +716,10 @@ libide_dep = declare_dependency(
 libide_plugin_dep = declare_dependency(
   sources: libide_generated_headers,
   dependencies: [
+    libdazzle_dep,
     libgio_dep,
     libgtk_dep,
     libgtksource_dep,
-    libpnl_dep,
     libegg_dep,
     libjson_glib_dep,
   ],
@@ -740,7 +739,7 @@ if get_option('with_introspection')
     ],
     includes: [
       libegg_gir[0], 'Gio-2.0', 'GtkSource-3.0',
-      'Peas-1.0', libpnl_gir[0], libtmpl_gir[0],
+      'Peas-1.0', 'Dazzle-1.0', libtmpl_gir[0],
       'Json-1.0'],
     install: true,
     install_dir_gir: pkggirdir,
@@ -760,7 +759,7 @@ if get_option('with_introspection')
         'gtksourceview-3.0',
         'libpeas-1.0',
         'json-glib-1.0',
-        libpnl_vapi,
+        'libdazzle-1.0',
         libegg_vapi,
         libtmpl_vapi,
       ],
