documentation-card: card showing relevant information about a library function or a data type
Initial commit of the Documentation Card feature. Showing a manual in which the function or data type is described.

--- a/plugins/devhelp/meson.build
+++ b/plugins/devhelp/meson.build
@@ -7,6 +7,8 @@ devhelp_resources = gnome.compile_resources(
 )
 
 devhelp_sources = [
+  'gbp-devhelp-documentation-card.c',
+  'gbp-devhelp-documentation-card.h',
   'gbp-devhelp-editor-view-addin.c',
   'gbp-devhelp-editor-view-addin.h',
   'gbp-devhelp-panel.c',
